# GithubCLIExporter

./: .gitignore  .goreleaser.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  prerelease.yml  release.yml
docs/: build.md  cheatsheet.md  prd-001.md  technical.md
go-cli/: buildturns_test.go  cssjs.go  discovery.go  discovery_test.go  go.mod  go.sum  main.go  main_test.go  models.go  models_test.go  parser.go  parser_test.go  renderer_html.go  renderer_html_test.go  renderer_md.go  renderer_md_test.go  toolformat.go  toolformat_test.go  version.go  version_test.go
go-cli/testdata/empty-session/: workspace.yaml
go-cli/testdata/full-session/: events.jsonl  plan.md  session.db  workspace.yaml
go-cli/testdata/full-session/checkpoints/: cp-001.md  cp-002.md  index.md
sessions/01/: events.jsonl  plan.md  session.db  workspace.yaml
sessions/01/checkpoints/: 001-reverse-engineering-dcf-array.md  002-namespace-serialization-and-de.md  003-decoding-namespace-serializati.md  index.md
sessions/01/rewind-snapshots/: index.json
sessions/01/rewind-snapshots/backups/: 008838d8b9496131-1773258790939  07d2e6211d83561f-1773258790929  18cb6ad566702fd2-1773258790937  322db3b02fa94438-1773255645769  518298cec6211324-1773255645765  5387d3cf5ddf8aac-1773258790932  5aadda8c8c1320c6-1773258790927  62932a4c7945bdb7-1773258790934  65fff4bb61aa3800-1773258790931  68ed589f79665433-1773255645767  b55afeb53151ef47-1773255645771  (+2 more)
src/copilot_export/: __init__.py  __main__.py  cli.py  discovery.py  models.py  parser.py  renderer_html.py  renderer_md.py
